// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render based on current route 1`] = `
<DocumentFragment>
  <div
    class="root visible"
  >
    <nav
      class="navigation"
    >
      <div
        data-pinned="false"
        data-testid="navigation"
      >
        <button
          type="button"
        >
          pin-toggle
        </button>
        <button
          type="button"
        >
          navigate
        </button>
        <button
          type="button"
        >
          logout
        </button>
        <button
          type="button"
        >
          profile
        </button>
      </div>
    </nav>
    <div
      class="content"
    >
      <main
        class="main"
      >
        <div
          class="viewContainer"
        >
          <div
            data-testid="view-renderer"
          >
            test
          </div>
        </div>
        <header>
          <div
            data-open="false"
            data-testid="toolbar"
          >
            <button
              type="button"
            >
              toggle-nav
            </button>
          </div>
        </header>
      </main>
      <div
        data-testid="sidebar"
      />
    </div>
  </div>
  <div
    data-open="false"
    data-testid="profile-overlay"
  />
</DocumentFragment>
`;

exports[`Render based on current route with app version 1`] = `
<DocumentFragment>
  <div
    class="root visible"
  >
    <nav
      class="navigation"
    >
      <div
        data-pinned="false"
        data-testid="navigation"
      >
        <button
          type="button"
        >
          pin-toggle
        </button>
        <button
          type="button"
        >
          navigate
        </button>
        <button
          type="button"
        >
          logout
        </button>
        <button
          type="button"
        >
          profile
        </button>
      </div>
    </nav>
    <div
      class="content"
    >
      <main
        class="main"
      >
        <div
          class="viewContainer"
        >
          <div
            data-testid="view-renderer"
          >
            test
          </div>
        </div>
        <header>
          <div
            data-open="false"
            data-testid="toolbar"
          >
            <button
              type="button"
            >
              toggle-nav
            </button>
          </div>
        </header>
      </main>
      <div
        data-testid="sidebar"
      />
    </div>
  </div>
  <div
    data-open="false"
    data-testid="profile-overlay"
  />
</DocumentFragment>
`;

exports[`Render login screen to reset password 1`] = `
<DocumentFragment>
  <div
    data-testid="login"
  >
    initialized-reset
  </div>
  <div
    class="loader"
  >
    <div
      data-testid="loader"
    >
      Loader
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render login when user is not logged in 1`] = `
<DocumentFragment>
  <div
    data-testid="login"
  >
    initialized
  </div>
  <div
    class="loader"
  >
    <div
      data-testid="loader"
    >
      Loader
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render login with loader 1`] = `
<DocumentFragment>
  <div
    data-testid="login"
  >
    not-initialized
  </div>
  <div
    class="loader"
  >
    <div
      data-testid="loader"
    >
      Loader
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render opened navigation 1`] = `
<DocumentFragment>
  <div
    class="root visible navigationVisible"
  >
    <nav
      class="navigation"
    >
      <div
        data-pinned="false"
        data-testid="navigation"
      >
        <button
          type="button"
        >
          pin-toggle
        </button>
        <button
          type="button"
        >
          navigate
        </button>
        <button
          type="button"
        >
          logout
        </button>
        <button
          type="button"
        >
          profile
        </button>
      </div>
    </nav>
    <div
      class="content"
    >
      <main
        class="main"
      >
        <div
          class="viewContainer"
        >
          <div
            data-testid="view-renderer"
          >
            test
          </div>
        </div>
        <header>
          <div
            data-open="true"
            data-testid="toolbar"
          >
            <button
              type="button"
            >
              toggle-nav
            </button>
          </div>
        </header>
      </main>
      <div
        data-testid="sidebar"
      />
      <button
        data-testid="backdrop"
        type="button"
      >
        backdrop
      </button>
    </div>
  </div>
  <div
    data-open="false"
    data-testid="profile-overlay"
  />
</DocumentFragment>
`;

exports[`Should not fail if current route does not exist 1`] = `
<DocumentFragment>
  <div
    class="root visible"
  >
    <nav
      class="navigation"
    >
      <div
        data-pinned="false"
        data-testid="navigation"
      >
        <button
          type="button"
        >
          pin-toggle
        </button>
        <button
          type="button"
        >
          navigate
        </button>
        <button
          type="button"
        >
          logout
        </button>
        <button
          type="button"
        >
          profile
        </button>
      </div>
    </nav>
    <div
      class="content"
    >
      <main
        class="main"
      >
        <div
          class="viewContainer"
        />
        <header>
          <div
            data-open="false"
            data-testid="toolbar"
          >
            <button
              type="button"
            >
              toggle-nav
            </button>
          </div>
        </header>
      </main>
      <div
        data-testid="sidebar"
      />
    </div>
  </div>
  <div
    data-open="false"
    data-testid="profile-overlay"
  />
</DocumentFragment>
`;
